# ZZZHDW_mcp-server-kusto

./: .gitignore  LICENSE  pyproject.toml
src/mcp_server_kusto/: __init__.py  server.py
